welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:9: error: '<-' expected but ')' found.
  for (i<=0 to i){
                ^arrayFront9:19: error: illegal start of simple expression
} 
^